@@ -2,8 +2,8 @@ import com.github.spotbugs.SpotBugsTask
 
 plugins {
     id 'application'
-    id 'com.github.spotbugs' version '1.6.2'
-    id 'org.jetbrains.kotlin.jvm' version '1.2.51'
+    id 'com.github.spotbugs' version '1.6.9'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.21'
 }
 
 group 'com.github.shiguruikai'
@@ -20,7 +20,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation "com.worksap.nlp:sudachi:0.1.1-SNAPSHOT"
 
-    compileOnly 'com.github.spotbugs:spotbugs-annotations:3.1.6'
+    compileOnly 'com.github.spotbugs:spotbugs-annotations:3.1.11'
 }
 
 compileKotlin {
@@ -28,12 +28,6 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
-}
-
-kotlin {
-    experimental {
-        coroutines "enable"
-    }
 }
 
 tasks.withType(SpotBugsTask) {
@@ -45,13 +39,9 @@ tasks.withType(SpotBugsTask) {
 
 mainClassName = 'com.github.shiguruikai.textgenerator.TextGeneratorCommandLine'
 
-// Sudachiで発生するJVM（バージョン9以上のみ）の警告を抑制するオプション
-//applicationDefaultJvmArgs = ['--add-opens=java.base/java.nio=ALL-UNNAMED',
-//                             '--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED']
-
 jar {
     manifest {
         attributes 'Main-Class': mainClassName
     }
-    from configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
 }
